# wanted_quest

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  test_senior_app.py
alembic/: env.py
alembic/versions/: 16bc1e636d0b_add_language_field_to_company_tags.py  83b6d23c3274_init_migration.py
app/: config.py  database.py  main.py
app/api/: companies.py  search.py  tags.py
app/models/: __init__.py  company.py  tag.py
app/schemas/: common.py  companies.py  tags.py
app/services/: common.py  company.py  company_create.py  company_read.py  tag.py  tokenizer.py
app/services/tests/: test_tokenize.py
scripts/: company_tag_sample.csv  migrate_test_data.py
